wikipedia_loader/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikipedia-loader-svc
  namespace: exercises
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: wikipedia-loader
