wikipedia_loader/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikipedia-loader-ingress
  namespace: exercises
spec:
  ingressClassName: nginx
  rules:
  - host: wikipedia.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wikipedia-loader-svc
            port:
              number: 80
